# mm-iot-esp32

./: .gitignore  README.md  VERSION.md  shell.nix
examples/iperf/: CMakeLists.txt  sdkconfig.defaults
examples/iperf/main/: CMakeLists.txt  idf_component.yml
examples/porting_assistant/: CMakeLists.txt  sdkconfig.defaults
examples/porting_assistant/main/: CMakeLists.txt  idf_component.yml
examples/rf-test/: CMakeLists.txt  sdkconfig.defaults
examples/rf-test/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
examples/scan/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32s3
examples/scan/main/: CMakeLists.txt
examples/sta_connect/: CMakeLists.txt
examples/sta_connect/main/: CMakeLists.txt  idf_component.yml
examples/sta_reboot/: CMakeLists.txt
examples/sta_reboot/main/: CMakeLists.txt
examples/transfer_reset/: CMakeLists.txt
examples/transfer_reset/main/: CMakeLists.txt  idf_component.yml
examples/web_camera_serve/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/web_camera_serve/main/: CMakeLists.txt  idf_component.yml
framework/: Pipfile
framework/doc/html/: GETTING_STARTED.html  MMAPPS.html  MMPLATFORMS.html  MMPLATFORMS.js  MM_EKH08_ESP32S3.html  annotated.html  annotated_dup.js  classes.html  deprecated.html  dir_022c92c61385e284b387f088f94448a5.html  dir_022c92c61385e284b387f088f94448a5_dep.map  dir_022c92c61385e284b387f088f94448a5_dep.md5  dir_41ab0ac03243bb54c7eb11710dae29bc.html  dir_41ab0ac03243bb54c7eb11710dae29bc.js  dir_41ab0ac03243bb54c7eb11710dae29bc_dep.map  dir_41ab0ac03243bb54c7eb11710dae29bc_dep.md5  dir_67d33429b1561bf51670ce26b3eca76b.html  dir_67d33429b1561bf51670ce26b3eca76b.js  dir_67d33429b1561bf51670ce26b3eca76b_dep.map  dir_67d33429b1561bf51670ce26b3eca76b_dep.md5  dir_6dca21a3fcecd8b0ec3e16267067d634.html  dir_6dca21a3fcecd8b0ec3e16267067d634_dep.map  (+233 more)
framework/mk/: core-esp32-xtensa-lx7.mk  misc.mk  mmipal.mk  mmpktmem.mk  morsefirmware.mk  slip.mk
framework/mm_shims/: CMakeLists.txt  Kconfig  REUSE.toml  hostap_morse_common.h  idf_component.yml  mmhal.c  mmosal_shim_freertos_esp32.c  wlan_hal.c
framework/morsefirmware/: bcf_aw_hm593.mbin  bcf_aw_hm593_4v3.mbin  bcf_mf03120.mbin  bcf_mf08251.mbin  bcf_mf08551.mbin  bcf_mf08651_us.mbin  bcf_mf16858_us.mbin  mm6108.mbin
framework/morselib/: CMakeLists.txt  README.md  idf_component.yml
framework/src/mmipal/: CMakeLists.txt  idf_component.yml  mmipal.h
framework/src/mmipal/freertosplustcp/: mmipal_freertosplustcp.c
framework/src/mmipal/lwip/: mmipal_lwip.c  mmnetif.c
framework/src/mmiperf/: CMakeLists.txt  Kconfig  idf_component.yml
framework/src/mmiperf/common/: mmiperf_common.c  mmiperf_data.c  mmiperf_list.c  mmiperf_private.h
framework/src/mmiperf/freertosplustcp/: mmiperf_freertosplustcp.h  mmiperf_freertosplustcp_common.c  mmiperf_tcp.c  mmiperf_udp.c
framework/src/mmiperf/lwip/: mmiperf_lwip.h  mmiperf_tcp.c  mmiperf_udp.c
framework/src/mmpktmem/: CMakeLists.txt  Kconfig  idf_component.yml  mmpktmem_heap.c  mmpktmem_static.c
(+92 files in other folders)
